<resources>
    <string name="app_name">My IPO App</string>
    <string name="main_toolbar_msg">Informe Padrão de Ocorrências</string>


    <string name="name">Digite seu nome</string>
    <string name="number">Numeração: ex(xxxxx)</string>
    <string name="add_user">Adicionar Usuário</string>
    <string name="del_user">Excluir Usuário</string>
    <string name="home">Home</string>

    <string name="home_txt_addUser">Caso seu nome não esteja na lista acima, clique em <b><font color="#FFFFC107">adicionar usuário</font></b> para fazer o cadastro.</string>
    <string name="sair">Sair</string>


    <string name="select_name">Selecione seu nome</string>
    <string name="select_graduation">Selecione a graduação</string>
    <string name="select_type">Tipo:</string>
    <string name="select_crbm">Selecione o CRBM</string>
    <string name="adicionar">Adicionar</string>
    <string name="select_obm">Selecione a OBM</string>
    <string name="save">Salvar</string>
    <string name="next">Próximo</string>
    <string name="register_txt_header">Preencha os campos para realizar cadastro do usuário</string>
    <string name="registerVehicles_txt_header">Preencha os campos para realizar cadastro da viatura.</string>
    <string name="msg_deletar">Deseja excluir este usuário?</string>
    <string name="msg_delete_vehicle">Deseja excluir esta viatura?</string>
    <string name="delete_txt_msg">Clique e segure sobre o ícone da lixeira referente ao nome para deletar o usuário</string>
    <string name="deleteVehicles_txt_msg">Clique e segure sobre o ícone da lixeira referente a viatura para deleta-la</string>
    <string name="initial_txt_msg">Informações Iniciais</string>
    <string name="initial_txt_time">Selecione a data e hora nos icones abaixo</string>
    <string name="initial_auto_nature">Natureza:</string>
    <string name="city">Cidade:</string>
    <string name="street">Logradouro:</string>
    <string name="neighborhood">Bairro:</string>
    <string name="complement">Complemento:</string>
    <string name="mandatory">*</string>
    <string name="mandatory_item">* Itens obrigatórios</string>
    <string name="address_txt_msg">Informe os dados abaixo</string>
    <string name="address_toolbar_msg">Local do evento</string>
    <string name="resources">Recursos</string>
    <string name="add_vehicles">Adicionar viaturas</string>
    <string name="del_vehicles">Excluir Viaturas</string>
    <string name="resources_toolbar_msg">Recursos utilizados</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resources_auto_cb">Unidade:</string>
    <string name="victims_txt_header">Nesta ocorrência houve vitimas?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="victims_toolbar_msg">Danos à pessoas</string>
    <string name="initial_toolbar_msg">Informações Iniciais</string>
    <string name="victims_constrainsLayout_txt_reader">Informe a quantidade de vítima conforme o código</string>
    <string name="victims_constraintLayout_txt_unharmed">Ilesa:</string>
    <string name="victims_constraintLayout_txt_code1">Código 1:</string>
    <string name="victims_constraintLayout_txt_code2">Código 2:</string>
    <string name="victims_constraintLayout_txt_code3">Código 3:</string>
    <string name="victims_constraintLayout_txt_code4">Código 4:</string>
    <string name="victims_constraintLayout_txt_total">Total:</string>
    <string name="victims_editField_obs">Informações da(s) vítima(s)</string>
    <string name="otherInformation_toolbar_msg">Informações complementares</string>
    <string name="otherInformation_Snackbar_helpEnvironment">Ex: O produto quimíco, código ONU XXXXX, contaminou as aguas do Rio Guanabára."</string>
    <string name="otherInformation_Snackbar_helpProperty">Ex: Um prédio comercial com aproximadamente 1000m² totalmente destruído pelas chamas.</string>
    <string name="otherInformation_Snackbar_helpScenery">Ex: Segundo o solicitante, no local indicado, havia um incêndio de grandes proporções.</string>
    "
    <string name="otherInformation_Snackbar_helpUnfolding">Ex: Retratar o que se viu na ocorrência.</string>
    <string name="otherInformation_editField_environment">Danos ao Meio Ambiente</string>
    <string name="otherInformation_editField_property">Danos à propriedade</string>
    <string name="otherInformation_editfield_scenery">Cenário</string>
    <string name="otherInformation_editfield_unfolding">Desdobramento</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="optional_field">Campo opcional</string>

    <string name="label_aeronautica">Aeronáutica</string>
    <string name="label_bombeiroPrivado">Bombeiro Privado</string>
    <string name="label_ciaAgua">CIA de Água e Esgoto</string>
    <string name="label_BpmoaPmpr">BPMOA/PMPR</string>
    <string name="label_CiaEnergia">CIA de Energia Elétrica</string>
    <string name="label_CbOutroEstado">CB de Outro Estado</string>
    <string name="label_DefesaCivil">Defesa Civil (Casa Militar)</string>
    <string name="label_DefesaCivilCompdec">Defesa Civil (COMPDEC)</string>
    <string name="label_ConcessionariaRodovia">Concessionária da Rodovia</string>
    <string name="label_crea">CREA</string>
    <string name="label_DerDnit">DER/DNIT</string>
    <string name="label_exercito">Exército</string>
    <string name="label_FiscalizacaoMunicipal">Fiscalização de Trânsito Municipal</string>
    <string name="label_GuardaMunicipal">Guarda Municipal</string>
    <string name="label_GuardaPortuaria">Guarda Portuária</string>
    <string name="label_iap">IAP</string>
    <string name="label_ibama">IBAMA</string>
    <string name="label_iml">IML</string>
    <string name="label_instituicaoPrivada">Instituição Privada</string>
    <string name="label_InstituicaoPublica">Instituição Pública</string>
    <string name="label_marinha">Marinha</string>
    <string name="label_pmpr">PMPR</string>
    <string name="label_policiaCientifica">Polícia Científica Paraná</string>
    <string name="label_polIciaCivil">Polícia Civil</string>
    <string name="label_policiaFederal">Polícia Federal</string>
    <string name="label_policiaFlorestal">Polícia Florestal</string>
    <string name="label_policiaMilitarOutroEstado">Polícia Militar de Outro Estado</string>
    <string name="label_policiaRodoviariaFederal">Polícia Rodoviária Federal</string>
    <string name="label_receitaEstadual">Receita Estadual</string>
    <string name="label_vigilinciaSanitaria">Vigilância Sanitária Municipal</string>
    <string name="label_vigilinciaSanitariaEstadual">Vigilância Sanitária Estadual</string>
    <string name="label_policiaRodoviariaEstadual">Polícia Rodoviária Estadual</string>
    <string name="label_prefeituraMunicipal">Prefeitura Municipal</string>
    <string name="label_samu">SAMU</string>
    <string name="summary_txt_msg">Selecione o orgão</string>

    <string name="label_data">Data:</string>
    <string name="label_horas">Horas:</string>
    <string name="label_natureza">Natureza:</string>
    <string name="label_SubNatureza">Sub natureza:</string>
    <string name="del_usuario">Excluir Usuário</string>
    <string name="label_nome">Nome:</string>
    <string name="label_graduacao">Graduação:</string>
    <string name="label_crbm">CRBM:</string>
    <string name="label_obm">OBM:</string>
    <string name="label_cidade">Cidade:</string>
    <string name="label_logradouro">Logradouro:</string>
    <string name="label_bairro">Bairro:</string>
    <string name="label_cbAcionado">CB/PBC: Acionado</string>
    <string name="label_CbAcionado">CB Acionado:</string>
    <string name="label_complemento">Complemento:</string>
    <string name="label_abtr">ABTR:</string>
    <string name="label_aa">AA:</string>
    <string name="label_abs">ABS:</string>
    <string name="label_abt">ABT:</string>
    <string name="label_vtrComplementar">Viatura complementar:</string>
    <string name="label_selecaoVtr">Selecione a viatura abaixo ou clique e segure no ícone da lixeira para excluí-la.</string>
    <string name="label_selectVtr">Selecione as viaturas empenhadas:</string>
    <string name="label_efetivoEmpenhado">Número de BMs empenhados:</string>
    <string name="n_bms">nº de BMs:</string>
    <string name="totalVitimas">Total de vítimas:</string>
    <string name="vtrs_empenhadas">Viaturas empenhadas:</string>
    <string name="cod1">Cód 1:</string>
    <string name="cod2">Cód 2:</string>
    <string name="cod3">Cód 3:</string>
    <string name="cod4">Cód 4:</string>
    <string name="vitIlesa">Vitimas Ilesas:</string>
    <string name="label_obsVitima">Observação da Vítima</string>
    <string name="label_desdobramento">Desdobramento</string>
    <string name="label_cenario">Cenário</string>
    <string name="label_danosPropriedade">Danos a Propriedade</string>
    <string name="label_danosAmbiente">Danos ao Meio Ambiente</string>
    <string name="summary_txt_support">Apoio</string>
    <string name="summary_txt_responsible">Responsável pelas informações:</string>
    <string name="crbm1">1º COMANDO REGIONAL DE BOMBEIRO MILITAR - CURITIBA</string>
    <string name="crbm2">2º COMANDO REGIONAL DE BOMBEIRO MILITAR - LONDRINA</string>
    <string name="crbm3">3º COMANDO REGIONAL DE BOMBEIRO MILITAR - CASCAVEL</string>


</resources>