<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue2"
    tools:context=".main.view.main.view.SupportAgencyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/support_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue2"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Apoio"
        app:titleMarginStart="10dp"
        app:titleTextColor="@color/white"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/summary_txt_msg"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/support_toolbar" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/base_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <CheckBox
                android:id="@+id/ckBox1"
                style="@style/ckb"
                android:text="@string/label_aeronautica" />

            <CheckBox
                android:id="@+id/ckBox2"
                style="@style/ckb"
                android:text="@string/label_bombeiroPrivado" />

            <CheckBox
                android:id="@+id/ckBox3"
                style="@style/ckb"
                android:text="@string/label_ciaAgua" />

            <CheckBox
                android:id="@+id/ckBox4"
                style="@style/ckb"
                android:text="@string/label_BpmoaPmpr" />

            <CheckBox
                android:id="@+id/ckBox5"
                style="@style/ckb"
                android:text="@string/label_CiaEnergia" />

            <CheckBox
                android:id="@+id/ckBox6"
                style="@style/ckb"
                android:text="@string/label_CbOutroEstado" />

            <CheckBox
                android:id="@+id/ckBox7"
                style="@style/ckb"
                android:text="@string/label_DefesaCivil" />

            <CheckBox
                android:id="@+id/ckBox8"
                style="@style/ckb"
                android:text="@string/label_DefesaCivilCompdec" />

            <CheckBox
                android:id="@+id/ckBox10"
                style="@style/ckb"
                android:text="@string/label_ConcessionariaRodovia" />

            <CheckBox
                android:id="@+id/ckBox11"
                style="@style/ckb"
                android:text="@string/label_crea" />

            <CheckBox
                android:id="@+id/ckBox12"
                style="@style/ckb"
                android:text="@string/label_DerDnit" />


            <CheckBox
                android:id="@+id/ckBox13"
                style="@style/ckb"
                android:text="@string/label_exercito" />

            <CheckBox
                android:id="@+id/ckBox14"
                style="@style/ckb"
                android:text="@string/label_FiscalizacaoMunicipal" />

            <CheckBox
                android:id="@+id/ckBox15"
                style="@style/ckb"
                android:text="@string/label_GuardaMunicipal" />

            <CheckBox
                android:id="@+id/ckBox16"
                style="@style/ckb"
                android:text="@string/label_GuardaPortuaria" />

            <CheckBox
                android:id="@+id/ckBox17"
                style="@style/ckb"
                android:text="@string/label_iap" />

            <CheckBox
                android:id="@+id/ckBox18"
                style="@style/ckb"
                android:text="@string/label_ibama" />

            <CheckBox
                android:id="@+id/ckBox19"
                style="@style/ckb"
                android:text="@string/label_iml" />

            <CheckBox
                android:id="@+id/ckBox20"
                style="@style/ckb"
                android:text="@string/label_instituicaoPrivada" />

            <CheckBox
                android:id="@+id/ckBox21"
                style="@style/ckb"
                android:text="@string/label_InstituicaoPublica" />

            <CheckBox
                android:id="@+id/ckBox22"
                style="@style/ckb"
                android:text="@string/label_marinha" />

            <CheckBox
                android:id="@+id/ckBox23"
                style="@style/ckb"
                android:text="@string/label_pmpr" />

            <CheckBox
                android:id="@+id/ckBox24"
                style="@style/ckb"
                android:text="@string/label_policiaCientifica" />

            <CheckBox
                android:id="@+id/ckBox25"
                style="@style/ckb"
                android:text="@string/label_polIciaCivil" />


            <CheckBox
                android:id="@+id/ckBox26"
                style="@style/ckb"
                android:text="@string/label_policiaFederal" />


            <CheckBox
                android:id="@+id/ckBox27"
                style="@style/ckb"
                android:text="@string/label_policiaFlorestal" />

            <CheckBox
                android:id="@+id/ckBox28"
                style="@style/ckb"
                android:text="@string/label_policiaMilitarOutroEstado" />

            <CheckBox
                android:id="@+id/ckBox29"
                style="@style/ckb"
                android:text="@string/label_policiaRodoviariaFederal" />

            <CheckBox
                android:id="@+id/ckBox30"
                style="@style/ckb"
                android:text="@string/label_receitaEstadual" />

            <CheckBox
                android:id="@+id/ckBox31"
                style="@style/ckb"
                android:text="@string/label_vigilinciaSanitaria" />

            <CheckBox
                android:id="@+id/ckBox32"
                style="@style/ckb"
                android:text="@string/label_vigilinciaSanitariaEstadual" />

            <CheckBox
                android:id="@+id/ckBox33"
                style="@style/ckb"
                android:text="@string/label_policiaRodoviariaEstadual" />

            <CheckBox
                android:id="@+id/ckBox34"
                style="@style/ckb"
                android:text="@string/label_prefeituraMunicipal" />

            <CheckBox
                android:id="@+id/ckBox35"
                style="@style/ckb"
                android:text="@string/label_samu" />

        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="Apoio"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <TextView
        android:id="@+id/support_txt_listSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/support_button_next"
        style="@style/Theme.MyIPOApp.ButtonMain"
        android:enabled="false"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--<TextView
      android:id="@+id/textview1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp"/>

      <TextView
      android:id="@+id/textview2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp"/>

      <TextView
      android:id="@+id/textview3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp"
          />

      <TextView
      android:id="@+id/textview5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview14"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview15"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview16"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview17"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview18"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview19"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

      <TextView
      android:id="@+id/textview20"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />
      <TextView
      android:id="@+id/textview21"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />
      <TextView
      android:id="@+id/textview22"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_name"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/textview23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_name"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/textview24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_name"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp" />
        <TextView
            android:id="@+id/textview25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_name"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp" />
        <TextView
            android:id="@+id/textview26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_name"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp" />

    textview1.text = returnFireman
    textview2.text = returnCrbm
    textview3.text = returnObm
    textview4.text = returnDate
    textview5.text = returnTime
    textview6.text = returnNature
    textview8.text = returnSubNature
    textview9.text = returnCity
    textview10.text = returnStreet
    textview11.text = returnNeighborhood
    textview12.text = returnComplement
    textview13.text = returnCb
    textview14.text = returnNumber
    textview15.text = returnVehicles
    textview16.text = returnUnharmed.toString()
    textview17.text = returnCode1.toString()
    textview18.text = returnCode2.toString()
    textview19.text = returnCode3.toString()
    textview20.text = returnCode4.toString()
    textview21.text = returnTotal.toString()
    textview22.text = returnObsVictims
    textview23.text = returnEnvironment
    textview24.text = returnProperty
    textview25.text = returnScenery
    textview26.text = returnUnfolding-->